<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="hcm.ditagis.com.tanhoa.qlts.QuanLySuCo">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:subtitle=""
            app:title="" />


    </android.support.design.widget.AppBarLayout>

    <include

        layout="@layout/content_quan_ly_su_co" />

    <LinearLayout
        android:id="@+id/layout_layer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|top"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginRight="@dimen/fab_margin"
        android:layout_marginTop="60dp"
        android:background="@drawable/layout_shape"
        android:orientation="vertical"
        android:padding="@dimen/padding_title_popup"
        android:visibility="invisible">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_layer_close"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="right"
                android:background="@color/colorRed"
                android:text="x"
                tools:ignore="RtlHardcoded" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="Chọn bản đồ nền"
                android:textColor="@color/colorBlack" />
        </FrameLayout>
        <!--chọn bản đồ nền-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="3">


            <LinearLayout
                android:id="@+id/layout_layer_open_street_map"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="@dimen/padding_title_popup"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/img_layer_open_street_map"
                    android:layout_width="64dp"
                    android:layout_height="50dp"
                    android:background="@drawable/layout_shape_basemap"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/open_street_map" />

                <TextView
                    android:id="@+id/txt_layer_open_street_map"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/text_layer_margin"
                    android:text="@string/title_layer_default"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_layer_street_map"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="@dimen/padding_title_popup"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/img_layer_street_map"
                    android:layout_width="64dp"
                    android:layout_height="50dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/street_map" />

                <TextView
                    android:id="@+id/txt_layer_street_map"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/text_layer_margin"
                    android:text="@string/title_layer_street"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_layer_topo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="@dimen/padding_title_popup"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/img_layer_topo"
                    android:layout_width="64dp"
                    android:layout_height="50dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/imagery_with_labels" />

                <TextView
                    android:id="@+id/txt_layer_topo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/text_layer_margin"
                    android:text="@string/title_layer_satellite"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="@dimen/fab_margin"
            android:background="@android:color/black" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="Ẩn/hiện dữ liệu hành chính"
                        android:textColor="@color/colorBlack" />


                </FrameLayout>


                <LinearLayout
                    android:id="@+id/linnearDisplayLayer1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginBottom="@dimen/fab_margin"
                    android:background="@android:color/black" />


                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="Ẩn/hiện lớp dữ liệu"
                        android:textColor="@color/colorBlack" />


                </FrameLayout>


                <LinearLayout
                    android:id="@+id/linnearDisplayLayer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" />
            </LinearLayout>

        </ScrollView>
    </LinearLayout>

    <ImageView
        android:id="@+id/img_map_pin"
        android:layout_width="64dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:src="@drawable/pin"
        android:visibility="gone" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatBtnLayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|top"
        android:layout_marginRight="@dimen/fab_margin"
        android:layout_marginTop="70dp"
        android:src="@drawable/layer"
        android:visibility="visible"
        app:backgroundTint="@android:color/white" />
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatBtnLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|top"
        android:layout_marginRight="@dimen/fab_margin"
        android:layout_marginTop="140dp"
        android:src="@drawable/location"
        android:visibility="visible"
        app:backgroundTint="@android:color/white"/>

</android.support.design.widget.CoordinatorLayout>
